Fallback remote URL now works.